[package]
name = "web2epub"
version = "0.1.0"
authors = ["Angel Alonso <angel.fonseca@deliveryhero.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.5"
reqwest = { version = "0.9.15", features=["rustls-tls"] }
prettytable-rs = "0.6.2"
select = "0.5.0"
