[package]
name = "web2epub"
version = "0.2.0"
authors = ["Angel Alonso <angel.fonseca@deliveryhero.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
epub-builder = "0.4.8"
yaml-rust = "0.4.5"
reqwest = { version = "0.11.2", features=["rustls-tls", "blocking"] }
select = "0.5.0"
